chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krateo-insecure-ingress
  namespace: krateo-system
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: cors-krateo
    konghq.com/strip-path: "true"
spec:
  rules:
    - host: api.krateo.site
      http:
        paths:
          - path: /auth/*
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krateo-secure-ingress
  namespace: krateo-system
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: jwt-krateo, cors-krateo
    konghq.com/strip-path: "true"
spec:
  rules:
    - host: api.krateo.site
      http:
        paths:
          - path: /package/*
            pathType: Prefix
            backend:
              service:
                name: provider-service
                port:
                  number: 80
          - path: /secret/*
            pathType: Prefix
            backend:
              service:
                name: secret-service
                port:
                  number: 80
          - path: /kubernetes/*
            pathType: Prefix
            backend:
              service:
                name: kubernetes-service
                port:
                  number: 80
          - path: /deployment/*
            pathType: Prefix
            backend:
              service:
                name: deployment-service
                port:
                  number: 80
          - path: /argocd/*
            pathType: Prefix
            backend:
              service:
                name: argocd-service
                port:
                  number: 80
          - path: /pipeline/*
            pathType: Prefix
            backend:
              service:
                name: pipeline-service
                port:
                  number: 80
          - path: /codequality/*
            pathType: Prefix
            backend:
              service:
                name: codequality-service
                port:
                  number: 80
          - path: /capi/*
            pathType: Prefix
            backend:
              service:
                name: capi-service
                port:
                  number: 80
          - path: /keptn/*
            pathType: Prefix
            backend:
              service:
                name: keptn-service
                port:
                  number: 80
          - path: /template/*
            pathType: Prefix
            backend:
              service:
                name: template-service
                port:
                  number: 80
          - path: /doc/*
            pathType: Prefix
            backend:
              service:
                name: git-service
                port:
                  number: 80
